--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -14,7 +14,7 @@
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:id="@+id/rl_item_wifi"
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="12dp">
@@ -27,7 +27,7 @@
             android:layout_marginTop="4dp"
             android:src="@drawable/point_time" />
         <TextView
-            android:id="@+id/mac"
+            android:id="@+id/sid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -39,15 +39,35 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/mac"
+            android:layout_below="@+id/sid"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="4dp"
             android:src="@drawable/point_address" />
         <TextView
-            android:id="@+id/address"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/mac"
+            android:layout_below="@+id/sid"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="6dp"
+            android:textColor="@color/wallet_text_gray"
+            android:textSize="@dimen/meduim_text" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/name"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/point_result" />
+
+        <TextView
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_marginRight="12dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="6dp"
             android:textColor="@color/wallet_text_gray"
